# Cbit-Game-Engine

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Config.cmake.in  Makefile  README.md  build.bat  cbte_install.py  cbtepackage.json  install.py  install_libraries.py  library.json  package.json  premake5.lua  run.bat  source_copy.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
data/mesh/: Cube.gpmesh
data/shaders/: Basic.frag  Basic.vert  BasicMesh.frag  BasicMesh.vert  Phong.frag  Phong.vert
docs/: CHANGELOG.md  RESOURCES.md  SOURCECODES.md
examples/assets/shaders/: rectangle.frag  rectangle_camera.frag
examples/src/: main.cpp
examples/src/scenes/: CubeScene.cpp  CubeScene.h  CubeTextureScene.cpp  CubeTextureScene.h  MeshScene.cpp  MeshScene.h  RectangleCameraScene.cpp  RectangleCameraScene.h  RectangleScene.cpp  RectangleScene.h  SimpleScene.cpp  SimpleScene.h  TriangleScene.cpp  TriangleScene.h
resources/assets/scenes/: default_scene.json
resources/branding/: cbit.rc
resources/config/: editor.ini
resources/shaders/: color.vert  default.frag  default.vert  mesh.frag  mesh.vert  mesh_lighting.frag  mesh_lighting.vert  splash_screen.frag  text.frag  text.vert
scripts/: compile_time.py
src/: Application.cpp  Application.h  Config.h  Game.cpp  Game.h  Makefile  README.md  cthead.cpp  cthead.h  main.cpp
src/config/: window.json
src/core/: Application.cpp  Application.h  AssetManager.cpp  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  Components.h  CubeMesh.cpp  EditorCamera.cpp  EditorCamera.h  EntityComponentSystem.cpp  EntityComponentSystem.h  GameObject.h  Input.cpp  Input.h  Key.h  Lighting.h  Locator.cpp  Locator.h  Mesh.cpp  Mesh.h  MeshQuad.cpp  MeshQuad.h  Model.cpp  Model.h  OrbitCamera.cpp  OrbitCamera.h  Project.cpp  Project.h  Quad.cpp  Quad.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderProgram.cpp  ShaderProgram.h  SoilTexture.cpp  (+12 more)
src/core/camera/: Camera.cpp  CameraManager.cpp  CameraManager.h  EditorCamera.cpp  EditorCamera.h  OrbitCamera.cpp  OrbitCamera.h  UICamera.cpp  UICamera.h
src/core/ecs/: CameraSystem.cpp  CameraSystem.h  Components.h  EntityComponentSystem.cpp  EntityComponentSystem.h  GameObject.cpp  GameObject.h  LightingSystem.cpp  LightingSystem.h
src/core/graphic/: Lighting.h  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  TextRenderer.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/core/input/: Input.cpp  Keyboard.h  MouseButton.h
src/core/locator/: Locator.cpp  Locator.h
src/core/mesh/: CubeMesh.cpp  CubeMesh.h  Mesh.h  MeshQuad.cpp  MeshQuad.h  Model.cpp  Model.h  Quad.h
src/core/project/: AssetManager.cpp  AssetManager.h  Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h
src/core/splash/: SplashScreen.cpp  SplashScreen.h
src/core/window/: Window.cpp  Window.h
src/ecs/: AnimationSprite.cpp  AnimationSprite.h  Component.cpp  Component.h  EntitiesManager.cpp  EntitiesManager.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Image2D.cpp  Image2D.h  MeshComponent.h  MeshGPHComponent.h  SpriteRenderer.cpp  SpriteRenderer.h  TestComponent.h  Text.h  Transform.cpp  Transform.h
src/ecs/3d/: MeshC.cpp  MeshC.h
src/editor/: Editor.cpp  Editor.h  EditorLogSink.cpp  EditorLogSink.h  EditorMainMenuBar.cpp  EditorMainMenuBar.h  EditorThemes.cpp  EditorThemes.h  ProfilePanel.cpp  ProfilePanel.h  ProjectManager.cpp  ProjectManager.h
src/graphic/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/imgui/: ImGuiFileDialog.cpp  ImGuiLayer.cpp  ImGuiLayer.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_internal.h
src/math/: Math.h  Random.cpp  Random.h
src/object/: Actor.cpp  Actor.h  SimpleText.h
src/renderer/: Texture.h
src/sandbox/: Player.cpp  Player.h
src/sandbox2D/: PlayScene.cpp  PlayScene.h  Player.cpp  Player.h
src/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SplashScreenScene.cpp  SplashScreenScene.h
src/shader/: Basic.frag  Basic.vert  Sprite.frag  Sprite.vert  Transfom.vert
src/ui/: SimpleText.cpp  SimpleText.h
src/utilities/: AssetManager.cpp  AssetManager.h  AssetsManager.cpp  AssetsManager.h  BuildGenerator.cpp  BuildGenerator.h  DateTime.cpp  DateTime.h  ForkAwesomIcon.h  ForkAwesomeIcon.h  JsonTemplate.h  LocalMachine.cpp  LocalMachine.h  Logger.cpp  Logger.h  Math.cpp  Math.h  Random.cpp  Random.h  ResourcesDirectory.cpp  ResourcesDirectory.h  Singleton.h  SmartPointer.h  UUIDGenerator.cpp  UUIDGenerator.h
src/utils/: Asset.cpp  Asset.h  Cursor.cpp  Cursor.h  Input.cpp  Input.h  Math.h  Random.h  ResourcesAllocator.cpp  ResourcesAllocator.h  ResourcesDirectory.cpp  ResourcesDirectory.h  TextureLoader.cpp  TextureLoader.h
src2/: Game.cpp  Game.h  Renderer.cpp  Renderer.h  main.cpp
src2/core/: Component.cpp  Component.h  Component2.cpp  Component2.h  Entity.cpp  Entity.h  EntityManager.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp
src2/core/components/: MeshComponent.h  MeshComponent2.h
src2/other/: Actor.cpp  Actor.h  Component.cpp  Component.h  MeshComponent.cpp  MeshComponent.h
test/: find_directory.cpp  test_inheritance.cpp  test_reference_param.cpp
tests/: SimpleTest.cpp
